<resources>
    <string name="app_name">Pixabay</string>

    <string name="photo_id">Photo Id: </string>
    <string name="views">Views: </string>
    <string name="likes">Likes: </string>
    <string name="favorites">Favorites: </string>
    <string name="tags">Tags: </string>
    <string name="downloads">Downloads: </string>
    <string name="download">Download</string>
    <string name="who">By: </string>
    <string name="title_activity_search">Search</string>
    <string name="succes_copy">Successfully copied to the clipboard</string>
    <string name="search">Search: </string>
    <string name="search_for">Search for: </string>
    <string name="high_resolution">High Resolution</string>
    <string name="resolution">Resolution:</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="sort_by">Sort By:</string>
    <string name="category">Category</string>
    <string name="fashion">Fashion</string>
    <string name="nature">Nature</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="science">Science</string>
    <string name="education">Education</string>
    <string name="people">People</string>
    <string name="feelings">Feelings</string>
    <string name="religion">Religion</string>
    <string name="health">Health</string>
    <string name="places">Places</string>
    <string name="animals">Animals</string>
    <string name="industry">Industry</string>
    <string name="food">Food</string>
    <string name="computer">Computer</string>
    <string name="sports">Sports</string>
    <string name="transportation">Transportation</string>
    <string name="travel">Travel</string>
    <string name="buildings">Buildings</string>
    <string name="business">Bussiness</string>
    <string name="music">Music</string>
</resources>
