<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb380"
    tools:context="com.dev.marki.pixabay.Activities.Detail">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/detail_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/who"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_user">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/photo_id"
                android:textIsSelectable="true"
                android:textSize="18sp" />

            <Button
                android:id="@+id/detail_button_copy"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/copy" />

            <TextView
                android:id="@+id/detail_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/resolution" />
        </LinearLayout>

        <TableRow
            style="@style/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_likes"
                style="@style/textStyle"
                android:text="@string/likes" />

            <TextView
                android:id="@+id/detail_views"
                style="@style/textStyle"
                android:text="@string/views" />
        </TableRow>

        <TableRow
            style="@style/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_favorites"
                style="@style/textStyle"
                android:text="@string/favorites" />

            <TextView
                android:id="@+id/detail_downloads"
                style="@style/textStyle"
                android:text="@string/downloads" />
        </TableRow>

        <TableRow
            style="@style/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView>

                <TextView
                    android:id="@+id/detail_tags"
                    style="@style/textStyle"
                    android:text="@string/tags"
                    android:textIsSelectable="true" />
            </ScrollView>
        </TableRow>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
